--- a/source/stylus/initial/myself.styl
+++ b/source/stylus/initial/myself.styl
@@ -1,9 +1,8 @@
 // The initial sites styles
 
 #myself {
-  ::-webkit-scrollbar {
-    display: none; 
-  }
+  -ms-overflow-style: none
+  overflow: -moz-scrollbars-none
 
   #manifesto figure {
     background-image: url(myself-image)
@@ -129,4 +128,8 @@
       transform: rotate(-90deg)
     }
   }
+}
+
+#myself::-webkit-scrollbar {
+  width: 0 !important
 }
